--- a/android-developer.html
+++ b/android-developer.html
@@ -99,7 +99,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">New York, NYNew York, NY</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012246002'>Job Application for Android Developer at TrackTik</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012246002'>Job Application for Android Developer at TrackTik</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -156,15 +156,15 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/2dd5091d-1994-4003-bbd5-e84056e8742d'>Gojek - Android Engineer - Developer Experience</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/2dd5091d-1994-4003-bbd5-e84056e8742d'>Gojek - Android Engineer - Developer Experience</a></h5> 
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/homeadvisorangieslist/jobs/4490279002'>Job Application for Android Developer at HomeAdvisor & Angie's List</a></h5> 
+<h5><a href='https://boards.greenhouse.io/homeadvisorangieslist/jobs/4490279002'>Job Application for Android Developer at HomeAdvisor & Angie's List</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amaro/735bc0b7-4743-4a54-b7f7-0a986f83706a'>AMARO - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/amaro/735bc0b7-4743-4a54-b7f7-0a986f83706a'>AMARO - Android Developer</a></h5> 
 <p><span class="badge badge-light">S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -226,7 +226,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Senior-Android-Developer/703'>Senior Android Developer - Career Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Senior-Android-Developer/703'>Senior Android Developer - Career Portal</a></h5> 
 <p><span class="badge badge-light">Manchester, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -246,7 +246,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/senior-android-developer-lindera'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/senior-android-developer-lindera'>
       Senior Android Developer @ Lindera - Rheingau Founders Portfolio
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -302,7 +302,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -322,7 +322,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Minsk France Italy Mexico</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697384225-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697384225-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -347,7 +347,7 @@ Android Developer (f/m/d) at diconium in Berlin | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/android/jobs/8325-experienced-android-application-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8325-experienced-android-application-developer'>
 Experienced Android Application Developer at Yor Labs Inc in Portland | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -361,7 +361,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Amsterdam Amsterdam, Netherlands</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
+<h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -373,7 +373,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://www.hiretale.com/jobs/view/14944/FieldAssist-Sr-Android-Developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hiretale.com/jobs/view/14944/FieldAssist-Sr-Android-Developer'>
         FieldAssist - Sr Android Developer (3-6 yrs), Gurgaon, OOPs,MVP,MVVM,Android,Kotlin,Mobile App Development, (Mobile App Development jobs) - hiretale.com    </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
@@ -443,7 +443,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/isobar/job/oLjjbfwi'>Isobar Careers - Freelance Lead Android Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/isobar/job/oLjjbfwi'>Isobar Careers - Freelance Lead Android Developer</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -467,11 +467,11 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
+<h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://www.jobsaddaa.com/jobs/hiring-android-developers-for-hyderabad-location/'>Hiring Android Developers for Hyderabad Location | JobsAddaa.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.jobsaddaa.com/jobs/hiring-android-developers-for-hyderabad-location/'>Hiring Android Developers for Hyderabad Location | JobsAddaa.com</a></h5> 
 <p><span class="badge badge-light">Hyderabad Hyderabad Hyderabad</span></p>
 <p>Posted on:: 2019-10-09</p>
 <hr/>
@@ -486,7 +486,7 @@ Android Developer at Bikemap in  | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8291-android-developer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8291-android-developer'>
 Android Developer at Streami Inc. in Taepyeongno 1(il)-ga | Android jobs | 42jobs.io
 
 </a></h5> 
